--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,5 @@
 	<string name="host_title">Host an Epidemic</string>
 	<string name="contact_lookup_prompt">Add a Player: </string>
 	<string name="contact_lookup_button">Search Contacts</string>
+	<string name="start_game_button">Start Game</string>
 </resources>
