--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,12 @@
 <resources>
 
     <string name="app_name">SMSpidemic</string>
-	<string name="host_title">Host an Epidemic</string>
-	<string name="contact_lookup_prompt">Add a Player: </string>
-	<string name="contact_lookup_button">Search Contacts</string>
-	<string name="start_game_button">Start Game</string>
+    <string name="host_title">Host an Epidemic</string>
+    <string name="contact_lookup_prompt">Add a Player: </string>
+    <string name="contact_lookup_button">Search Contacts</string>
+    <string name="start_game_button">Start Game</string>
+    <string name="title_activity_launcher">SMSpidemic</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
