--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,12 +2,17 @@
 <resources>
 
     <string name="app_name">SMSpidemic</string>
-    <string name="host_title">Host an Epidemic</string>
+    <string name="host_title">Start an Epidemic</string>
     <string name="contact_lookup_prompt">Add a Player: </string>
     <string name="contact_lookup_button">Search Contacts</string>
     <string name="start_game_button">Start Game</string>
     <string name="title_activity_launcher">SMSpidemic</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="launcher_title">Welcome to SMSpidemic!</string>
+    <string name="startGameButton">Start a Game</string>
+    <string name="gameStatusButton">Game Status</string>
+    <string name="title_activity_game_status">SMSpidemic</string>
+	<string name="game_status">Current Game Status</string>
+    
 </resources>
