--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">SMSpidemic</string>
     <string name="host_title">Start an Epidemic</string>
     <string name="contact_lookup_prompt">Add Players: </string>
-    <string name="contact_lookup_button">Add Contact</string>
+    <string name="contact_lookup_button">Add a Contact</string>
+    <string name="contact_remove_button">Remove a Contact</string>
     <string name="start_game_button">Start Game</string>
     <string name="title_activity_launcher">SMSpidemic</string>
     <string name="hello_world">Hello world!</string>
@@ -22,6 +23,7 @@
     <string name="phone_prompt">Your Phone Number: </string>
     <string name="name_prompt">Your Name: </string>
     <string name="status_info_nogame">No current game.</string>
+    <string name="player1">Player 1</string>
     <string name="about_text">\t<b>Player Types</b>     	\n\n\t<u>Doctors</u>\n*About <b>30
         percent</b> of players are assigned initially to this class.\n
         *High resistance to disease\n
